# Blocky-Chess-Engine

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  runTests.sh  runUCI.sh  test_board
.github/workflows/: cmake-multi-platform.yml
src/: attacks.cpp  attacks.hpp  bench.cpp  bench.hpp  bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  eval.cpp  eval.hpp  inCheck.cpp  inCheck.hpp  main.cpp  move.cpp  move.hpp  moveGen.cpp  moveGen.hpp  moveOrder.cpp  moveOrder.hpp  movePicker.cpp  movePicker.hpp  perft.hpp  pieceSets.cpp  pieceSets.hpp  search.cpp  search.hpp  timeman.cpp  timeman.hpp  ttable.cpp  ttable.hpp  types.h  types.hpp  uci.cpp  uci.hpp  zobrist.cpp  zobrist.hpp
src/utils/: enums.hpp  fixedVector.hpp  rand64.hpp  types.hpp
tests/: CMakeLists.txt  README.md  testBitBoard.cpp  testBitboard.cpp  testBoard.cpp  testEval.cpp  testInCheck.cpp  testMoveGen.cpp  testMoveOrder.cpp  testSearch.cpp  test_board.cpp
tools/: CMakeLists.txt  magic.cpp  magic.hpp
tools/magic/: CMakeLists.txt  magic.cpp
tools/tune/: CMakeLists.txt  extract.cpp  extract.hpp  texelBlocky.cpp  texelBlocky.hpp  tune.cpp  tune.hpp
